Update index.html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title> BMW I8</title>
     <meta name="discription" content=" BMW I8  " />
-    <link rel="stylesheet" href="css/master.Css">
+    <link rel="stylesheet" href="CSS/master.Css">
 </head>
 
 <body>
