Update audiR8.html file

--- a/audiR8.html
+++ b/audiR8.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>page_audi R8</title>
-    <link rel="stylesheet" href="css/audiR8.css">
+    <link rel="stylesheet" href="CSS/audiR8.css">
 </head>
 
 <body>
